samples/_failures_safe/1761304750_7ca4d1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_01a45c27.c: In function ‘read_log_file’:
./samples/SAFE/__tmp_01a45c27.c:146:20: error: missing terminating " character
  146 |             printf("Skipping malformed line: %s
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_01a45c27.c:146:13: error: expected expression at end of input
  146 |             printf("Skipping malformed line: %s
      |             ^~~~~~
./samples/SAFE/__tmp_01a45c27.c:146:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_01a45c27.c:146:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_01a45c27.c:146:13: error: expected declaration or statement at end of input
